@@ -1,6 +1,6 @@
 #! /bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2014-2017 Laboratoire de Recherche et
+# Copyright (C) 2014-2018 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -102,3 +102,28 @@ run 0 autfilt -H1.1 --check=stutter input > input.2
 test `autfilt -c --is-stutter-invariant input` = 0
 grep '!deterministic' input.2
 grep '!stutter-invariant' input.2
+
+
+# From an email by Anton Pirogov
+cat >pirogov <<EOF
+HOA: v1
+name: "Evil(1)"
+States: 2
+Start: 0
+AP: 1 "p"
+acc-name: Buchi
+Acceptance: 1 Inf(0)
+properties: trans-labels explicit-labels state-acc
+--BODY--
+State: 0
+[t] 0
+[0] 1
+State: 1 {0}
+[0] 0
+--END--
+EOF
+
+for i in 1 2 3 4 5 6 7 8; do
+    test 0 = `SPOT_STUTTER_CHECK=$i \
+              autfilt pirogov --is-stutter-invariant -c` || exit 1
+done
